Version 7.0 - not yet released
* LUA scripting
* user interface
  - screen layout with 12 infoboxes on the left, vario+3 infoboxes on right
  - new translation: Traditional Chinese
  - new Logger-setting "CoPilot"
  - new setting "Thermal Averager needle"
  - select position of Thermal Assistant
* data files
  - optimise the terrain loader
  - support runway width in CUP files
* devices
  - parse wind from standard NMEA sentence WMV
  - driver for XC Tracer Vario
  - driver for KRT2 radio
  - driver for Air Control Display altimeter
  - show detailed error message in device list
  - FLARM/OGN - make it possible to set/download registered device database
  - device manager: show flag if device provides data from
      environmental sensors (temperature, humidity)
  - combine traffic from all FLARM devices (support both FLARM and OGN devices on board)
  - GliderLink: new driver
  - AirControlDisplay: read radio frequencies from PAAVS,COM sentence
  - driver for LXNano modified, so declaration contains copilot
* weather
  - merge all weather data in one dialog
  - allow showing both terrain and RASP
  - RASP download from various well-known providers
  - show satellite images from pc_met (Deutscher Wetterdienst)
  - show wave forecast from pc_met (Deutscher Wetterdienst)
* calculations
  - merge redundant waves
  - task restart
* tracking
  - use DNS to resolve SkyLines server IP (#2604)
  - enable SkyLines traffic display on Windows
  - add option to show SkyLines traffic names on the map
  - show thermals obtained from the XCSoar Cloud server
* analysis
  - enhanced graphics: minor tics, color scheme, layout
  - key labels drawn on lines in several pages
  - task turnpoint label drawn on relevant pages
  - barogram: improved working band ceiling and floor calculation
  - climb history: new display uses time of climb as width of bars
  - new page: vario histogram in climb and cruise mode
  - new page: maccready cross-country speed