@@ -34,6 +34,7 @@ Copyright_License {
 enum ControlIndex {
   PilotName,
   CoPilotName,
+  PilotWeGlideId,
   LoggerTimeStepCruise,
   LoggerTimeStepCircling,
   DisableAutoLogger,
@@ -69,6 +70,8 @@ LoggerConfigPanel::Prepare(ContainerWindow &parent, const PixelRect &rc)
   AddText(_("Pilot name"), nullptr, logger.pilot_name);
 
   AddText(_("CoPilot name"), nullptr, logger.copilot_name);
+
+  AddText(_("WeGlide Pilot ID"), nullptr, logger.pilot_weglide_id);
 
   AddTime(_("Time step cruise"),
           _("This is the time interval between logged points when not circling."),
@@ -111,6 +114,9 @@ LoggerConfigPanel::Save(bool &changed)
 
   changed |= SaveValue(CoPilotName, ProfileKeys::CoPilotName,
                        logger.copilot_name);
+
+  changed |= SaveValue(PilotWeGlideId, ProfileKeys::PilotWeGlideId,
+                       logger.pilot_weglide_id);
 
   changed |= SaveValue(LoggerTimeStepCruise, ProfileKeys::LoggerTimeStepCruise,
                        logger.time_step_cruise);
